fix: fixed minor bug with margin display on mobiles, added some variables

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,3 +5,6 @@ $blue: #2251CC;
 $light-blue: #0593FB;
 $grey: #52606D;
 $light-grey: #CBD2D9;
+$white: #FFF;
+$mobile: 600px;
+$one-column: 1200px;
